# dbtai

./: .gitignore  README.md  pyproject.toml
dbtai/: chatbot.py  cli.py  make_tests.py  manifest.py  utils.py
dbtai/templates/: prompts.py
